--- a/pom.xml
+++ b/pom.xml
@@ -5,10 +5,10 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>org.test</groupId>
-  <artifactId>servertest</artifactId>
+  <artifactId>InsureMeTest</artifactId>
   <version>0.0.1-SNAPSHOT</version>
 
-  <name>servertest</name>
+  <name>InsureMeTest</name>
   <!-- FIXME change it to the project's website -->
   <url>http://www.example.com</url>
 
