--- a/pom.xml
+++ b/pom.xml
@@ -65,7 +65,7 @@
                    </descriptorRefs>
                    <archive>
                        <manifest>
-                           <mainClass>testing.servertest.App</mainClass>
+                           <mainClass>org.test.InsureMeTest.App</mainClass>
                        </manifest>
                    </archive>
                </configuration>
